# games101

./: README.md  format.sh
assignment_1/: CMakeLists.txt  README.md  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment_2/: CMakeLists.txt  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp  triangle.cpp  triangle.hpp
assignment_3/: CMakeLists.txt  OBJ_Loader.h  README.md  main.cpp  rasterizer.cpp  rasterizer.hpp  shader.hpp  texture.hpp  triangle.cpp  triangle.hpp
assignment_4/: CMakeLists.txt  README.md  main.cpp
assignment_4/include/: pen.h
assignment_4/src/: main.cpp  pen.cpp
assignment_5/: CMakeLists.txt  README.md
assignment_5/include/: global.h  light.h  object.h  renderer.h  scene.h  sphere.h  triangle.h  vector.h
assignment_5/src/: main.cpp  renderer.cpp  scene.cpp
assignment_6/: CMakeLists.txt  README.md
assignment_6/include/: area_light.h  bounds3.h  bvh.h  global.h  inter_section.h  intersection.h  light.h  material.h  obj_loader.h  object.h  ray.h  renderer.h  scene.h  sphere.h  triangle.h  vector.h
assignment_6/src/: bvh.cpp  main.cpp  renderer.cpp  scene.cpp  vector.cpp
assignment_7/: CMakeLists.txt
assignment_7/include/: area_light.h  bounds3.h  bvh.h  global.h  intersection.h  light.h  material.h  object.h  ray.h  renderer.h  scene.h  sphere.h  triangle.h
assignment_7/include/objects/: mesh_triangle.h  object.h  sphere.h  triangle.h
assignment_7/include/utils/: obj_loader.h  vector.h
assignment_7/src/: BVH.cpp  Renderer.cpp  Scene.cpp  bound3.cpp  bvh.cpp  main.cpp  material.cpp
assignment_7/src/objects/: mesh_triangle.cpp  sphere.cpp  triangle.cpp
pa0/: CMakeLists.txt  main.cpp  output.txt
